apps/currency-exchange/currency-exchange.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currency-exchange
  labels:    
    app: currency-exchange
spec:
  replicas: 1
  selector:
    matchLabels:
      app: currency-exchange
  template:
    metadata:
      labels:
        app: currency-exchange        
    spec:
      containers:
        - name: currency-exchange
          image: "docker.io/burrsutter/hello:1.0.0"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
