apps/currency-exchange/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-exchange
  labels:    
    app: currency-exchange
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: currency-exchange
